# machinemotion

./: .gitignore  requirements.txt  setup.cfg
src/machinemotion/: __init__.py  machinemotion.py
