[metadata]
name = machinemotion
version = 0.0.1
author = f
author_email = f
description = f
long_description = file: README.md
long_description_content_type = text/markdown
url = f
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

python_requires = >=2.7